Fix link between Speaker popup window and Session popup window #80

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -73,7 +73,7 @@
 			<img src="{{ '/assets/images/speaker-abe.jpg' | prepend: site.baseurl }}" alt="阿部和広のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title">基調講演</h3>
+		<h3 class="session-title"><!-- <a href="#keynote" class="js-session-detail-trigger"> -->基調講演<!-- </a> --></h3>
 		<p class="session-time">10:40-11:20</p>
 	</div>
 	<div class="speaker-profile-box-right">
@@ -95,7 +95,7 @@
 			<img src="{{ '/assets/images/speaker-rossoneill.jpg' | prepend: site.baseurl }}" alt="ロス・オニールのプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title">CoderDojoムーブメントの旅 - アイルランドの1つのDojoから世界に広がる1000 Dojoへの軌跡をたどる（仮）</h3>
+		<h3 class="session-title"><!-- <a href="#coderdojo-foundation" class="js-session-detail-trigger"> -->CoderDojoムーブメントの旅 - アイルランドの1つのDojoから世界に広がる1000 Dojoへの軌跡をたどる（仮）<!-- </a> --></h3>
 		<p class="session-time">15:00-15:40</p>
 	</div>
 	<div class="speaker-profile-box-right">
@@ -117,9 +117,9 @@
 			<img src="{{ '/assets/images/speaker-miyajima.jpg' | prepend: site.baseurl }}" alt="宮島衣瑛のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title">学生の道場運営者に聞く！（仮）</h3>
+		<h3 class="session-title"><!-- <a href="#student-champions" class="js-session-detail-trigger"> -->学生の道場運営者に聞く！（仮）<!-- </a> --></h3>
 		<p class="session-time">11:25-11:45</p>
-		<h3 class="session-title">チャンピオンパネルディスカッション（仮）</h3>
+		<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-session-detail-trigger"> -->チャンピオンパネルディスカッション（仮）<!-- </a> --></h3>
 		<p class="session-time">15:40-16:20</p>
 	</div>
 	<div class="speaker-profile-box-right">
@@ -142,7 +142,7 @@
 			<img src="{{ '/assets/images/speaker-higashi.jpg' | prepend: site.baseurl }}" alt="東和樹のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title">学生の道場運営者に聞く！（仮）</h3>
+		<h3 class="session-title"><!-- <a href="#student-champions" class="js-session-detail-trigger"> -->学生の道場運営者に聞く！（仮）<!-- </a> --></h3>
 		<p class="session-time">11:25-11:45</p>
 	</div>
 	<div class="speaker-profile-box-right">
@@ -164,9 +164,9 @@
 			<img src="{{ '/assets/images/speaker-hosoya.jpg' | prepend: site.baseurl }}" alt="細谷崇のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title">オープニングセレモニー</h3>
+		<h3 class="session-title"><!-- <a href="#opening-ceremony" class="js-session-detail-trigger"> -->オープニングセレモニー<!-- </a> --></h3>
 		<p class="session-time">10:30-10:40</p>
-		<h3 class="session-title">チャンピオンパネルディスカッション（仮）</h3>
+		<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-session-detail-trigger"> -->チャンピオンパネルディスカッション（仮）<!-- </a> --></h3>
 		<p class="session-time">15:40-16:20</p>
 	</div>
 	<div class="speaker-profile-box-right">
@@ -190,7 +190,7 @@
 			<img src="{{ '/assets/images/speaker-terazono.jpg' | prepend: site.baseurl }}" alt="寺園聖文のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title">Minecraftとプログラミングの可能性</h3>
+		<h3 class="session-title"><!-- <a href="#coderdojo-minecraft" class="js-session-detail-trigger"> -->Minecraftとプログラミングの可能性<!-- </a> --></h3>
 		<p class="session-time">13:05-13:25</p>
 	</div>
 	<div class="speaker-profile-box-right">
@@ -214,7 +214,7 @@
 			<img src="{{ '/assets/images/speaker-okada.jpg' | prepend: site.baseurl }}" alt="岡田裕行のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title">子供でもArduinoを楽しめるBlocklyDuinoの紹介</h3>
+		<h3 class="session-title"><!-- <a href="#blocklyduino" class="js-session-detail-trigger"> -->子供でもArduinoを楽しめるBlocklyDuinoの紹介<!-- </a> --></h3>
 		<p class="session-time">11:45 - 12:05</p>
 	</div>
 	<div class="speaker-profile-box-right">
@@ -239,7 +239,7 @@
 		<p class="speaker-profile-box-label">Session</p>
 		<h3 class="session-title"><a href="#coderdojo-kodaira" class="js-fancybox-trigger">CoderDojo Kodairaの活動について</a></h3>
 		<p class="session-time">13:45-14:05</p>
-		<h3 class="session-title">チャンピオンパネルディスカッション（仮）</h3>
+		<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-session-detail-trigger"> -->チャンピオンパネルディスカッション（仮）<!-- </a> --></h3>
 		<p class="session-time">15:40-16:20</p>
 	</div>
 	<div class="speaker-profile-box-right">
