--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -1,7 +1,7 @@
 <ul class="speakers">
 	<li>
 		<figure class="speaker-avator">
-			<img src="{{ '/assets/images/speaker-abe.jpg' | prepend: site.baseurl }}" alt="岡田裕行のプロフィール画像">
+			<img src="{{ '/assets/images/speaker-abe.jpg' | prepend: site.baseurl }}" alt="阿部和広のプロフィール画像">
 		</figure>
 		<h2 class="speaker-name">阿部 和広</h2>
 		<p class="speaker-description">Kazuhiro Abe</p>
@@ -14,6 +14,14 @@
 		<h2 class="speaker-name">ロス・オニール</h2>
 		<p class="speaker-description">Ross O’Neill</p>
 		<p><a href="#ross-o-neill" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
+	</li>
+	<li>
+		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-ishihara.jpg' | prepend: site.baseurl }}" alt="石原淳也のプロフィール画像">
+		</figure>
+		<h2 class="speaker-name">石原 淳也</h2>
+		<p class="speaker-description">Kazuhiro Abe</p>
+		<p><a href="#junya-ishihara" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
 	</li>
 	<li>
 		<figure class="speaker-avator">
@@ -107,6 +115,25 @@
 		<div class="speaker-profile">
 			<p>アイルランドのCoderDojo財団のコミュニケーション・コミュニティリードとして世界中に広がるCoderDojo活動を支える役割を担う。ダブリン工科大学で電子計算学を専攻し卒業。フリーランスのフィンテック（金融テクノロジー）＆データジャーナリストとしてアイルランドのサンデイ・ビジネス・ポスト(Sunday Business Post)誌に記事を頻繁に掲載し、アイルランドのテクノロジー・ジャーナリスト協会のメンバーでもある。SWICN Intel Computer Clubhouse Dojoのメンターとしてのボランティア活動でも活躍。このアイルランドのDojoは小規模でスタートして以来発展し続けている。子供にコーディングを教えること以外に楽しんでいることは、ワインテイスティング、旅行、いろんなコンピュータゲームで宇宙を救うこと。</p>
 			<p>登壇方法は現在調整中</p>
+		</div>
+	</div>
+</div>
+
+<div id="junya-ishihara" class="speaker-profile-box js-speaker-profile-box">
+	<div class="speaker-profile-box-left">
+		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-ishihara.jpg' | prepend: site.baseurl }}" alt="石原淳也のプロフィール画像">
+		</figure>
+		<p class="speaker-profile-box-label">Session</p>
+		<h3 class="session-title"><a href="#scratch-movesomething" class="js-session-detail-trigger">Scratch2○○シリーズでScratchからさまざまなものを動かそう</a></h3>
+		<p class="session-time">12:25-12:45</p>
+	</div>
+	<div class="speaker-profile-box-right">
+		<h2 class="speaker-name">石原 淳也</h2>
+		<p class="speaker-description">Junya Ishihara</p>
+		<div class="speaker-profile">
+			<p>WebサービスやiPhoneアプリの開発を行うかたわら、CoderDojo Japanの立ち上げに関わったり、プログラミングサークルOtOMOなどで子供たちにプログラミングを教える活動を続けている。</p>
+			<p>「Raspberry Piではじめる どきどきプログラミング」共著者</p>
 		</div>
 	</div>
 </div>
