Add Session Profile student-champions #86

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -144,7 +144,7 @@
 			<img src="{{ '/assets/images/speaker-miyajima.jpg' | prepend: site.baseurl }}" alt="宮島衣瑛のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title"><!-- <a href="#student-champions" class="js-session-detail-trigger"> -->学生の道場運営者に聞く！（仮）<!-- </a> --></h3>
+		<h3 class="session-title"><a href="#student-champions" class="js-session-detail-trigger">学生の道場運営者に聞く！</a></h3>
 		<p class="session-time">11:25-11:45</p>
 		<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-session-detail-trigger"> -->チャンピオンパネルディスカッション（仮）<!-- </a> --></h3>
 		<p class="session-time">15:40-16:20</p>
@@ -169,7 +169,7 @@
 			<img src="{{ '/assets/images/speaker-higashi.jpg' | prepend: site.baseurl }}" alt="東和樹のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title"><!-- <a href="#student-champions" class="js-session-detail-trigger"> -->学生の道場運営者に聞く！（仮）<!-- </a> --></h3>
+		<h3 class="session-title"><a href="#student-champions" class="js-session-detail-trigger">学生の道場運営者に聞く！</a></h3>
 		<p class="session-time">11:25-11:45</p>
 	</div>
 	<div class="speaker-profile-box-right">
