Fix link etc. #83

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -20,7 +20,7 @@
 			<img src="{{ '/assets/images/speaker-ishihara.jpg' | prepend: site.baseurl }}" alt="石原淳也のプロフィール画像">
 		</figure>
 		<h2 class="speaker-name">石原 淳也</h2>
-		<p class="speaker-description">Kazuhiro Abe</p>
+		<p class="speaker-description">Junya Ishihara</p>
 		<p><a href="#junya-ishihara" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
 	</li>
 	<li>
@@ -130,6 +130,10 @@
 	</div>
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">石原 淳也</h2>
+		<ul class="speaker-sns">
+			<li><a href="https://twitter.com/jishiha" class="icon-twitter-circle" target="_blank"></a></li>
+			<li><a href="http://blog.champierre.com" class="icon-desktop-circle" target="_blank"></a></li>
+		</ul>
 		<p class="speaker-description">Junya Ishihara</p>
 		<div class="speaker-profile">
 			<p>WebサービスやiPhoneアプリの開発を行うかたわら、CoderDojo Japanの立ち上げに関わったり、プログラミングサークルOtOMOなどで子供たちにプログラミングを教える活動を続けている。</p>
