Fix bugs of modal windows

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -81,7 +81,7 @@
 			<img src="{{ '/assets/images/speaker-abe.jpg' | prepend: site.baseurl }}" alt="阿部和広のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title"><!-- <a href="#keynote" class="js-session-detail-trigger"> -->基調講演<!-- </a> --></h3>
+		<h3 class="session-title"><!-- <a href="#keynote" class="js-fancybox-trigger"> -->基調講演<!-- </a> --></h3>
 		<p class="session-time">10:40-11:20</p>
 	</div>
 	<div class="speaker-profile-box-right">
@@ -103,7 +103,7 @@
 			<img src="{{ '/assets/images/speaker-rossoneill.jpg' | prepend: site.baseurl }}" alt="ロス・オニールのプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title"><!-- <a href="#coderdojo-foundation" class="js-session-detail-trigger"> -->CoderDojoムーブメントの旅 - アイルランドの1つのDojoから世界に広がる1000 Dojoへの軌跡をたどる（仮）<!-- </a> --></h3>
+		<h3 class="session-title"><!-- <a href="#coderdojo-foundation" class="js-fancybox-trigger"> -->CoderDojoムーブメントの旅 - アイルランドの1つのDojoから世界に広がる1000 Dojoへの軌跡をたどる（仮）<!-- </a> --></h3>
 		<p class="session-time">15:00-15:40</p>
 	</div>
 	<div class="speaker-profile-box-right">
@@ -125,7 +125,7 @@
 			<img src="{{ '/assets/images/speaker-ishihara.jpg' | prepend: site.baseurl }}" alt="石原淳也のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title"><a href="#scratch-movesomething" class="js-session-detail-trigger">Scratch2○○シリーズでScratchからさまざまなものを動かそう</a></h3>
+		<h3 class="session-title"><a href="#scratch-movesomething" class="js-fancybox-trigger">Scratch2○○シリーズでScratchからさまざまなものを動かそう</a></h3>
 		<p class="session-time">12:25-12:45</p>
 	</div>
 	<div class="speaker-profile-box-right">
@@ -148,9 +148,9 @@
 			<img src="{{ '/assets/images/speaker-miyajima.jpg' | prepend: site.baseurl }}" alt="宮島衣瑛のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title"><a href="#student-champions" class="js-session-detail-trigger">学生の道場運営者に聞く！</a></h3>
+		<h3 class="session-title"><a href="#student-champions" class="js-fancybox-trigger">学生の道場運営者に聞く！</a></h3>
 		<p class="session-time">11:25-11:45</p>
-		<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-session-detail-trigger"> -->チャンピオンパネルディスカッション（仮）<!-- </a> --></h3>
+		<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-fancybox-trigger"> -->チャンピオンパネルディスカッション（仮）<!-- </a> --></h3>
 		<p class="session-time">15:40-16:20</p>
 	</div>
 	<div class="speaker-profile-box-right">
@@ -173,7 +173,7 @@
 			<img src="{{ '/assets/images/speaker-higashi.jpg' | prepend: site.baseurl }}" alt="東和樹のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title"><a href="#student-champions" class="js-session-detail-trigger">学生の道場運営者に聞く！</a></h3>
+		<h3 class="session-title"><a href="#student-champions" class="js-fancybox-trigger">学生の道場運営者に聞く！</a></h3>
 		<p class="session-time">11:25-11:45</p>
 	</div>
 	<div class="speaker-profile-box-right">
@@ -195,9 +195,9 @@
 			<img src="{{ '/assets/images/speaker-hosoya.jpg' | prepend: site.baseurl }}" alt="細谷崇のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title"><!-- <a href="#opening-ceremony" class="js-session-detail-trigger"> -->オープニングセレモニー<!-- </a> --></h3>
+		<h3 class="session-title"><!-- <a href="#opening-ceremony" class="js-fancybox-trigger"> -->オープニングセレモニー<!-- </a> --></h3>
 		<p class="session-time">10:30-10:40</p>
-		<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-session-detail-trigger"> -->チャンピオンパネルディスカッション（仮）<!-- </a> --></h3>
+		<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-fancybox-trigger"> -->チャンピオンパネルディスカッション（仮）<!-- </a> --></h3>
 		<p class="session-time">15:40-16:20</p>
 	</div>
 	<div class="speaker-profile-box-right">
@@ -221,7 +221,7 @@
 			<img src="{{ '/assets/images/speaker-terazono.jpg' | prepend: site.baseurl }}" alt="寺園聖文のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title"><!-- <a href="#coderdojo-minecraft" class="js-session-detail-trigger"> -->Minecraftとプログラミングの可能性<!-- </a> --></h3>
+		<h3 class="session-title"><!-- <a href="#coderdojo-minecraft" class="js-fancybox-trigger"> -->Minecraftとプログラミングの可能性<!-- </a> --></h3>
 		<p class="session-time">13:05-13:25</p>
 	</div>
 	<div class="speaker-profile-box-right">
@@ -245,7 +245,7 @@
 			<img src="{{ '/assets/images/speaker-okada.jpg' | prepend: site.baseurl }}" alt="岡田裕行のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title"><!-- <a href="#blocklyduino" class="js-session-detail-trigger"> -->子供でもArduinoを楽しめるBlocklyDuinoの紹介<!-- </a> --></h3>
+		<h3 class="session-title"><!-- <a href="#blocklyduino" class="js-fancybox-trigger"> -->子供でもArduinoを楽しめるBlocklyDuinoの紹介<!-- </a> --></h3>
 		<p class="session-time">11:45 - 12:05</p>
 	</div>
 	<div class="speaker-profile-box-right">
@@ -270,7 +270,7 @@
 		<p class="speaker-profile-box-label">Session</p>
 		<h3 class="session-title"><a href="#coderdojo-kodaira" class="js-fancybox-trigger">CoderDojo Kodairaの活動について</a></h3>
 		<p class="session-time">13:45-14:05</p>
-		<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-session-detail-trigger"> -->チャンピオンパネルディスカッション（仮）<!-- </a> --></h3>
+		<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-fancybox-trigger"> -->チャンピオンパネルディスカッション（仮）<!-- </a> --></h3>
 		<p class="session-time">15:40-16:20</p>
 	</div>
 	<div class="speaker-profile-box-right">
