Fix speaker name #97

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -36,8 +36,8 @@
 			<img src="{{ '/assets/images/speaker-higashi.jpg' | prepend: site.baseurl }}" alt="東和樹のプロフィール画像">
 		</figure>
 		<h2 class="speaker-name">東 和樹</h2>
-		<p class="speaker-description">HIGASHI, Kazuki</p>
-		<p><a href="#higashi-kazuki" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
+		<p class="speaker-description">Kazuki Higashi</p>
+		<p><a href="#kazuki-higashi" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
 	</li>
 	<li>
 		<figure class="speaker-avator">
@@ -167,7 +167,7 @@
 		</div>
 	</div>
 </div>
-<div id="higashi-kazuki" class="speaker-profile-box js-speaker-profile-box">
+<div id="kazuki-higashi" class="speaker-profile-box js-speaker-profile-box">
 	<div class="speaker-profile-box-left">
 		<figure class="speaker-avator">
 			<img src="{{ '/assets/images/speaker-higashi.jpg' | prepend: site.baseurl }}" alt="東和樹のプロフィール画像">
@@ -181,7 +181,7 @@
 		<ul class="speaker-sns">
 			<li><a href="https://www.facebook.com/kazuki.higashi.71" class="icon-facebook-circle" target="_blank"></a></li>
 		</ul>
-		<p class="speaker-description">HIGASHI, Kazuki</p>
+		<p class="speaker-description">Kazuki Higashi</p>
 		<div class="speaker-profile">
 			<p>明石工業高等専門学校卒業、大阪大学在学、現在21歳。</p>
 			<p>小学校・中学生時代にプログラミングに興味があったものの、独学には何度も挫折。友達に教えてもらい始めた競技プログラミングでその楽しさに気付き、同じ境遇の子供たちにプログラミングの楽しさを伝えるため、CoderDojo明石を主催する。6月12日までに7回開催。</p>
