Add English comment on Ross profile #107

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -114,7 +114,8 @@
 		<p class="speaker-description">Ross O’Neill</p>
 		<div class="speaker-profile">
 			<p>アイルランドのCoderDojo財団のコミュニケーション・コミュニティリードとして世界中に広がるCoderDojo活動を支える役割を担う。ダブリン工科大学で電子計算学を専攻し卒業。フリーランスのフィンテック（金融テクノロジー）＆データジャーナリストとしてアイルランドのサンデイ・ビジネス・ポスト(Sunday Business Post)誌に記事を頻繁に掲載し、アイルランドのテクノロジー・ジャーナリスト協会のメンバーでもある。SWICN Intel Computer Clubhouse Dojoのメンターとしてのボランティア活動でも活躍。このアイルランドのDojoは小規模でスタートして以来発展し続けている。子供にコーディングを教えること以外に楽しんでいることは、ワインテイスティング、旅行、いろんなコンピュータゲームで宇宙を救うこと。</p>
-			<p>登壇方法は現在調整中</p>
+			<p>登壇方法は現在調整中<br>
+			Presentation style is being adjusted</p>
 		</div>
 	</div>
 </div>
