Change the background color of sponsor and contact form page

--- a/assets/_sass/_common.scss
+++ b/assets/_sass/_common.scss
@@ -524,10 +524,11 @@ strong {
 	}
 
 	.copyright {
-		text-align: center;
+		background: #fff;
 		font-size: 14px;
 		font-weight: $light;
 		padding: 30px 20px;
+		text-align: center;
 	}
 }
 
