Change the link of contact in the global menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -69,7 +69,7 @@
 						<ul class="child-menu js-child-menu">
 							<li><a href="{{ '/' | prepend: site.baseurl }}#about">About</a></li>
 							<li><a href="{{ '/' | prepend: site.baseurl }}#news">News</a></li>
-							<li><a href="{{ '/' | prepend: site.baseurl }}#contact">Contact</a></li>
+							<li><a href="{{ '/contact/' | prepend: site.baseurl }}">Contact</a></li>
 							<li><a href="{{ '/' | prepend: site.baseurl }}#staff">Staff</a></li>
 						</ul>
 					</li><!--
