Add comment for pop-up windows

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -1,3 +1,4 @@
+<!-- 基本的には `ul.speakers` 内では `.js-speaker-profile-trigger`、 `ol.sessions` 内では `.js-session-detail-trigger`、 `ol.workshops` 内では最初の2つのみ `.js-session-detail-trigger`、それ以外は `.js-fancybox-trigger` でお願いします。 -->
 <ul class="speakers">
 	<li>
 		<figure class="speaker-avator">
