Add Session Information of Keynote and link to keynote from session timetable and speaker popup #119

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -82,7 +82,7 @@
 			<img src="{{ '/assets/images/speaker-abe.jpg' | prepend: site.baseurl }}" alt="阿部和広のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title"><!-- <a href="#keynote" class="js-fancybox-trigger"> -->基調講演<!-- </a> --></h3>
+		<h3 class="session-title"><a href="#keynote" class="js-fancybox-trigger">基調講演：「子供達にプログラミングをサポートする上で大事なポイント」</a></h3>
 		<p class="session-time">10:40-11:20</p>
 	</div>
 	<div class="speaker-profile-box-right">
