Add style of codes. Fix #128

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-<link href="https://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Oswald:400,700|Inconsolata:400,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace: 'index.html', '' | prepend: site.url }}">
 <link rel="shortcut icon" href="{{ '/assets/images/favicon.ico' | prepend: site.baseurl }}" type="image/vnd.microsoft.ico"/>
