--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -8,6 +8,8 @@
 @import "blockly-divider";
 @import "reset";
 @import "fancybox";
+@import "monokai";
+@import "monokai-custom";
 @import "components";
 @import "common";
 @import "index";
