--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
 </footer>
 
 {% if is_home %}
-	<script src="https://maps.google.com/maps/api/js?key=AIzaSyBoRN-0yJUdiiV-Z7CwhLrXsVoGYteE8sw&sensor=true" type="text/javascript"></script>
+	<script src="https://maps.google.com/maps/api/js?key=AIzaSyBoRN-0yJUdiiV-Z7CwhLrXsVoGYteE8sw" type="text/javascript"></script>
 {% endif %}
 <script src="{{ '/assets/js/main.js' | prepend: site.baseurl }}" type="text/javascript"></script>
 </body>
