Modify Junya Ishihara's profile and changed the title of his session.

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -127,7 +127,7 @@
 			<img src="{{ '/assets/images/speaker-ishihara.jpg' | prepend: site.baseurl }}" alt="石原淳也のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title"><a href="#scratch-movesomething" class="js-fancybox-trigger">Scratch2○○シリーズでScratchからさまざまなものを動かそう</a></h3>
+		<h3 class="session-title"><a href="#scratch-movesomething" class="js-fancybox-trigger">Scratch とマインクラフト、ドローンやロボットをつなげよう</a></h3>
 		<p class="session-time">12:25-12:45</p>
 	</div>
 	<div class="speaker-profile-box-right">
@@ -140,6 +140,7 @@
 		<div class="speaker-profile">
 			<p>WebサービスやiPhoneアプリの開発を行うかたわら、CoderDojo Japanの立ち上げに関わったり、プログラミングサークルOtOMOなどで子供たちにプログラミングを教える活動を続けている。</p>
 			<p>「Raspberry Piではじめる どきどきプログラミング」共著者</p>
+			<p>東京大学工学部機 械情報工学科卒。 株式会社まちクエスト代表取締役。 合同会社つくる社代表社員。</p>
 		</div>
 	</div>
 </div>
