--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -10,6 +10,14 @@
 	</li>
 	<li>
 		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-tanioka.jpg' | prepend: site.baseurl }}" alt="谷岡広樹のプロフィール画像">
+		</figure>
+		<h2 class="speaker-name">谷岡 広樹</h2>
+		<p class="speaker-description">Hiroki Tanioka</p>
+		<p><a href="#hiroki-tanioka" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
+	</li>
+	<li>
+		<figure class="speaker-avator">
 			<img src="{{ '/assets/images/speaker-rossoneill.jpg' | prepend: site.baseurl }}" alt="ロス・オニールのプロフィール画像">
 		</figure>
 		<h2 class="speaker-name">ロス・オニール</h2>
@@ -23,6 +31,14 @@
 		<h2 class="speaker-name">石原 淳也</h2>
 		<p class="speaker-description">Junya Ishihara</p>
 		<p><a href="#junya-ishihara" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
+	</li>
+	<li>
+		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-hashizume.jpg' | prepend: site.baseurl }}" alt="橋爪香織のプロフィール画像">
+		</figure>
+		<h2 class="speaker-name">橋爪 香織</h2>
+		<p class="speaker-description">Kaori Hashizume</p>
+		<p><a href="#kaori-hashizume" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
 	</li>
 	<li>
 		<figure class="speaker-avator">
@@ -98,6 +114,27 @@
 	</div>
 </div>
 
+<div id="hiroki-tanioka" class="speaker-profile-box js-speaker-profile-box">
+	<div class="speaker-profile-box-left">
+		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-tanioka.jpg' | prepend: site.baseurl }}" alt="東和樹のプロフィール画像">
+		</figure>
+		<p class="speaker-profile-box-label">Session</p>
+		<h3 class="session-title"><a href="#programming-schools-discussion" class="js-fancybox-trigger">有償と無償で何が違う？<br>プログラミング教室/コミュニティー運営座談会</a></h3>
+		<p class="session-time">14:10-14:35</p>
+	</div>
+	<div class="speaker-profile-box-right">
+		<h2 class="speaker-name">谷岡 広樹（TENTOフェロー）</h2>
+		<ul class="speaker-sns">
+			<li><a href="https://www.facebook.com/taniokah" class="icon-facebook-circle" target="_blank"></a></li>
+		</ul>
+		<p class="speaker-description">Hiroki Tanioka (TENTO Fellow)</p>
+		<div class="speaker-profile">
+			<p>TENTOフェロー、徳島大学助教、博士(工学)。プログラマーとして自然言語処理や、情報検索のシステム開発に携わってきました。TENTOの設立者である草野、竹林両氏の志に共感し、2013年3月よりTENTOをお手伝い中です。</p>
+		</div>
+	</div>
+</div>
+
 <div id="ross-o-neill" class="speaker-profile-box js-speaker-profile-box">
 	<div class="speaker-profile-box-left">
 		<figure class="speaker-avator">
@@ -141,6 +178,30 @@
 			<p>WebサービスやiPhoneアプリの開発を行うかたわら、CoderDojo Japanの立ち上げに関わったり、プログラミングサークルOtOMOなどで子供たちにプログラミングを教える活動を続けている。</p>
 			<p>「Raspberry Piではじめる どきどきプログラミング」共著者</p>
 			<p>東京大学工学部機 械情報工学科卒。 株式会社まちクエスト代表取締役。 合同会社つくる社代表社員。</p>
+		</div>
+	</div>
+</div>
+
+<div id="kaori-hashizume" class="speaker-profile-box js-speaker-profile-box">
+	<div class="speaker-profile-box-left">
+		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-hashizume.jpg' | prepend: site.baseurl }}" alt="橋爪香織のプロフィール画像">
+		</figure>
+		<p class="speaker-profile-box-label">Session</p>
+		<h3 class="session-title"><a href="#programming-schools-discussion" class="js-fancybox-trigger">有償と無償で何が違う？<br>プログラミング教室/コミュニティー運営座談会</a></h3>
+		<p class="session-time">14:10-14:35</p>
+	</div>
+	<div class="speaker-profile-box-right">
+		<h2 class="speaker-name">橋爪 香織</h2>
+		<ul class="speaker-sns">
+			<li><a href="https://www.facebook.com/kaori.hashizume" class="icon-facebook-circle" target="_blank"></a></li>
+			<li><a href="https://twitter.com/cat_kaotaro" class="icon-twitter-circle" target="_blank"></a></li>
+		</ul>
+		<p class="speaker-description">Kaori Hashizume</p>
+		<div class="speaker-profile">
+			<p>某メーカーでハードウェア開発、およびソフトウェア開発を１０数年行っていました。現在はAndroidアプリ開発・コンサルティング、プログラミング技術研修・子供向けワークショップ講師、教材開発、アドバイザリー、執筆を行いながら、CoderDojoさいたまの運営をしています。</p>
+			<p>共著、著書として、「図解 Androidプラットフォーム開発入門」(技術評論社)、「Androidアプリ開発入門者のための教本」(カットシステム)、「5才からはじめる すくすくプログラミング」(日経BP)など。</p>
+			<p>株式会社チェリービット代表取締役、日本電子専門学校非常勤講師</p>
 		</div>
 	</div>
 </div>
