Add session outline BlocklyDuino #152

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -309,7 +309,7 @@
 			<img src="{{ '/assets/images/speaker-okada.jpg' | prepend: site.baseurl }}" alt="岡田裕行のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title"><!-- <a href="#blocklyduino" class="js-fancybox-trigger"> -->子供でもArduinoを楽しめるBlocklyDuinoの紹介<!-- </a> --></h3>
+		<h3 class="session-title"><a href="#blocklyduino" class="js-fancybox-trigger">子供でもArduinoを楽しめるBlocklyDuinoの紹介</a></h3>
 		<p class="session-time">11:45 - 12:05</p>
 	</div>
 	<div class="speaker-profile-box-right">
