--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -285,7 +285,7 @@
 			<img src="{{ '/assets/images/speaker-terazono.jpg' | prepend: site.baseurl }}" alt="寺園聖文のプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title"><!-- <a href="#coderdojo-minecraft" class="js-fancybox-trigger"> -->Minecraftとプログラミングの可能性<!-- </a> --></h3>
+		<h3 class="session-title"><a href="#coderdojo-minecraft" class="js-fancybox-trigger">Minecraftによるプログラミング学習の可能性</a></h3>
 		<p class="session-time">13:05-13:25</p>
 	</div>
 	<div class="speaker-profile-box-right">
