Add workshop description #181

--- a/assets/_sass/_index.scss
+++ b/assets/_sass/_index.scss
@@ -1378,6 +1378,12 @@
 						}
 					}
 
+					.description{
+						margin-top: 10px;
+						font-size: 14px;
+						font-weight: $light;
+					}
+
 					.time {
 						font-size: 14px;
 						font-weight: $light;
