--- a/_includes/header.html
+++ b/_includes/header.html
@@ -83,7 +83,7 @@
 			</ul>
 		</nav>
 		<p class="entry">
-			<a href="{{ site.entryurl }}" class="button button-blue button-disabled icon-flag" target="_blank">7/11エントリー開始</a>
+			<a href="{{ site.entryurl }}" class="button button-blue icon-flag" target="_blank">Entry</a>
 		</p>
 	</div>
 	<div class="menu-screen js-menu-screen"></div>
