Add champion panel discussion session and speakers maki, yamada, sumida and tajuta #205

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -58,11 +58,35 @@
 	</li>
 	<li>
 		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-maki.jpg' | prepend: site.baseurl }}" alt="牧美帆のプロフィール画像">
+		</figure>
+		<h2 class="speaker-name">牧 美帆</h2>
+		<p class="speaker-description">Miho Maki</p>
+		<p><a href="#miho-maki" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
+	</li>
+	<li>
+		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-dojocon-f.jpg' | prepend: site.baseurl }}" alt="山田早里のプロフィール画像">
+		</figure>
+		<h2 class="speaker-name">山田 早里</h2>
+		<p class="speaker-description">Sari Yamada</p>
+		<p><a href="#sari-yamada" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
+	</li>
+	<li>
+		<figure class="speaker-avator">
 			<img src="{{ '/assets/images/speaker-hosoya.jpg' | prepend: site.baseurl }}" alt="細谷崇のプロフィール画像">
 		</figure>
 		<h2 class="speaker-name">細谷 崇</h2>
 		<p class="speaker-description">Takashi Hosoya</p>
 		<p><a href="#takashi-hosoya" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
+	</li>
+	<li>
+		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-sumida.jpg' | prepend: site.baseurl }}" alt="角田一平のプロフィール画像">
+		</figure>
+		<h2 class="speaker-name">角田 一平</h2>
+		<p class="speaker-description">Ippei Sumida</p>
+		<p><a href="#ippei-sumida" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
 	</li>
 	<li>
 		<figure class="speaker-avator">
@@ -79,6 +103,14 @@
 		<h2 class="speaker-name">岡田 裕行</h2>
 		<p class="speaker-description">Hiroyuki Okada</p>
 		<p><a href="#hiroyuki-okada" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
+	</li>
+	<li>
+		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-tajuta.jpg' | prepend: site.baseurl }}" alt="田重田勝一郎のプロフィール画像">
+		</figure>
+		<h2 class="speaker-name">田重田　勝一郎</h2>
+		<p class="speaker-description">Shoichiro Tajuta</p>
+		<p><a href="#shoichiro-tajuta" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
 	</li>
 	<li>
 		<figure class="speaker-avator">
@@ -191,8 +223,6 @@
 		<p class="speaker-profile-box-label">Session</p>
 		<h3 class="session-title"><a href="#student-champions" class="js-fancybox-trigger">学生の道場運営者に聞く！</a></h3>
 		<p class="session-time">11:25-11:45</p>
-		<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-fancybox-trigger"> -->チャンピオンパネルディスカッション（仮）<!-- </a> --></h3>
-		<p class="session-time">15:40-16:20</p>
 	</div>
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">宮島 衣瑛</h2>
@@ -251,6 +281,54 @@
 	</div>
 </div>
 
+<div id="miho-maki" class="speaker-profile-box js-speaker-profile-box">
+	<div class="speaker-profile-box-left">
+		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-maki.jpg' | prepend: site.baseurl }}" alt="牧美帆のプロフィール画像">
+		</figure>
+		<p class="speaker-profile-box-label">Session</p>
+		<h3 class="session-title"><a href="#champion-panel-discussion" class="js-fancybox-trigger">チャンピオンパネルディスカッション</a></h3>
+		<p class="session-time">15:40-16:20</p>
+	</div>
+	<div class="speaker-profile-box-right">
+		<h2 class="speaker-name">牧 美帆</h2>
+		<ul class="speaker-sns">
+			<li><a href="https://www.facebook.com/miho.maki.10" class="icon-facebook-circle" target="_blank"></a></li>
+		</ul>
+		<p class="speaker-description">Miho Maki</p>
+		<div class="speaker-profile">
+			<p>短大卒業後、小中学校向けソフトメーカーでのインストラクターを経て、現在は企業のシステム部門に勤務しています。</p>
+			<p>出産をきっかけに、わが子を含め、未来を担う子どもたちの可能性を少しでも広げるお手伝いができないかと考えるようになりました。</p>
+			<p>そんなとき、細谷さんの活動をネットの記事で見かけ、これだ！　と思いました。</p>
+			<p>2016年よりチャンピオンの田重田さん、野口さんとCoderDojo堺をやらせていただいています。</p>
+		</div>
+	</div>
+</div>
+
+<div id="sari-yamada" class="speaker-profile-box js-speaker-profile-box">
+	<div class="speaker-profile-box-left">
+		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-dojocon-f.jpg' | prepend: site.baseurl }}" alt="山田早里のプロフィール画像">
+		</figure>
+		<p class="speaker-profile-box-label">Session</p>
+		<h3 class="session-title"><a href="#champion-panel-discussion" class="js-fancybox-trigger">チャンピオンパネルディスカッション</a></h3>
+		<p class="session-time">15:40-16:20</p>
+	</div>
+	<div class="speaker-profile-box-right">
+		<h2 class="speaker-name">山田 早里</h2>
+		<ul class="speaker-sns">
+			<li><a href="https://www.facebook.com/sari.yamada.79?fref=ts" class="icon-facebook-circle" target="_blank"></a></li>
+		</ul>
+		<p class="speaker-description">Sari Yamada</p>
+		<div class="speaker-profile">
+			<p>ゲーム命で剣道っ子な小５息子と、youtubeが大好きなで破天荒な４歳の息子を持つママさんエンジニア。<br>
+			子供の頃からの夢エンジニアになりたいという気持ちを捨てきれず、夫の応援もあり、奇跡的に？未経験ながらエンジニアの道へ踏み出したのが二年前。<br>
+			自分の子供ともっとＩＴで遊びたい、一緒にプログラミングの勉強をしたいと思ったのがdojoの参加のきっかけ。(ただし長男は作る方にはあまり興味がないので、今後の個人的な課題)<br>
+			忍者の頑張る姿と自分の子供の頃を重ねて、毎回ひそかにちょっと泣きそうになってるのが悩み。</p>
+		</div>
+	</div>
+</div>
+
 <div id="takashi-hosoya" class="speaker-profile-box js-speaker-profile-box">
 	<div class="speaker-profile-box-left">
 		<figure class="speaker-avator">
@@ -259,8 +337,6 @@
 		<p class="speaker-profile-box-label">Session</p>
 		<h3 class="session-title"><!-- <a href="#opening-ceremony" class="js-fancybox-trigger"> -->オープニングセレモニー<!-- </a> --></h3>
 		<p class="session-time">10:30-10:40</p>
-		<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-fancybox-trigger"> -->チャンピオンパネルディスカッション（仮）<!-- </a> --></h3>
-		<p class="session-time">15:40-16:20</p>
 	</div>
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">細谷 崇</h2>
@@ -273,6 +349,31 @@
 			<p>2015年3月にNPO法人の役員を退任し、現在はフリーランスとしてWordPressを使ったWEBシステムの構築、kintoneを使った業務システムの構築をしています。</p>
 			<p>CoderDojoは2012年12月西宮、2014年1月に梅田を開始し、約3年半CoderDojoの運営をしています。<br>
 			CoderDojoの無料で子供達が参加できることや、エンジニアがボランティアで関われる仕組みにとても共感し、日本にたくさんのCoderDojoができたらいいなと思い、本イベントのDojoCon Japanの実行委員長をしています。</p>
+		</div>
+	</div>
+</div>
+<div id="ippei-sumida" class="speaker-profile-box js-speaker-profile-box">
+	<div class="speaker-profile-box-left">
+		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-sumida.jpg' | prepend: site.baseurl }}" alt="角田一平のプロフィール画像">
+		</figure>
+		<p class="speaker-profile-box-label">Session</p>
+		<h3 class="session-title"><a href="#champion-panel-discussion" class="js-fancybox-trigger">チャンピオンパネルディスカッション</a></h3>
+		<p class="session-time">15:40-16:20</p>
+	</div>
+	<div class="speaker-profile-box-right">
+		<h2 class="speaker-name">角田 一平</h2>
+		<ul class="speaker-sns">
+			<li><a href="https://www.facebook.com/ippeisumida" class="icon-facebook-circle" target="_blank"></a></li>
+			<li><a href="https://twitter.com/ippey_s" class="icon-twitter-circle" target="_blank"></a></li>
+		</ul>
+		<p class="speaker-description">Ippei Sumida</p>
+		<div class="speaker-profile">
+			<p>CoderDojo西宮・梅田メンター、CoderDojo枚方チャンピオン<br>
+			DojoCon Japan 2016の副実行委員長</p>
+			<p>Web制作会社でのWeb開発の経験を経て、2016年7月からフリーランスとして活動を開始。PHPを利用したWebやiOS,Androidのスマートフォンのアプリの開発に携わる。<br>
+			2013年3月からCoderDojo梅田でメンターとして活動し、主にScratchやJavaScript、スマートフォンアプリのサポートを月に１回ペースで行っている。2016年7月から隔月に1回ペースで大阪府・枚方市でCoderDojoをスタート。<br>
+			道場の運営も行うようになった。</p>
 		</div>
 	</div>
 </div>
@@ -324,6 +425,29 @@
 	</div>
 </div>
 
+<div id="shoichiro-tajuta" class="speaker-profile-box js-speaker-profile-box">
+	<div class="speaker-profile-box-left">
+		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-tajuta.jpg' | prepend: site.baseurl }}" alt="田重田勝一郎のプロフィール画像">
+		</figure>
+		<p class="speaker-profile-box-label">Session</p>
+		<h3 class="session-title"><a href="#champion-panel-discussion" class="js-fancybox-trigger">チャンピオンパネルディスカッション</a></h3>
+		<p class="session-time">15:40-16:20</p>
+	</div>
+	<div class="speaker-profile-box-right">
+		<h2 class="speaker-name">田重田 勝一郎</h2>
+		<ul class="speaker-sns">
+			<li><a href="https://www.facebook.com/shoichiro.tajuta" class="icon-facebook-circle" target="_blank"></a></li>
+		</ul>
+		<p class="speaker-description">Shoichiro Tajuta</p>
+		<div class="speaker-profile">
+			<p>子ども向けのプログラミング教育に興味があり活動の場所を探していたところCoderDojoに出会い、2015年10月ごろからCoderDojo梅田のメンターとして活動を開始。</p>
+			<p>2016年2月にCoderDojo堺を立ち上げ、毎月1回のペースで道場を開催中です。</p>
+			<p>セッションではいちメンターとして活動していたごく普通のサラリーマンエンジニアが、周りの協力を得ながらCoderDojo堺のチャンピオンになった経緯などをお話しできればと思っています。</p>
+		</div>
+	</div>
+</div>
+
 <div id="togazono" class="speaker-profile-box js-speaker-profile-box">
 	<div class="speaker-profile-box-left">
 		<figure class="speaker-avator">
@@ -332,8 +456,6 @@
 		<p class="speaker-profile-box-label">Session</p>
 		<h3 class="session-title"><a href="#coderdojo-kodaira" class="js-fancybox-trigger">CoderDojo Kodairaの活動について</a></h3>
 		<p class="session-time">13:45-14:05</p>
-		<h3 class="session-title"><!-- <a href="#champion-panel-discussion" class="js-fancybox-trigger"> -->チャンピオンパネルディスカッション（仮）<!-- </a> --></h3>
-		<p class="session-time">15:40-16:20</p>
 	</div>
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">とがぞの</h2>
