--- a/assets/_sass/_index.scss
+++ b/assets/_sass/_index.scss
@@ -1148,9 +1148,9 @@
 
 			@include media($s-screen) {
 				@include sponsor-grid(7);
-				// // text-align: center;
-				// // margin-left: -3px;
-				// // margin-right: -4px;
+				// text-align: center;
+				// margin-left: -3px;
+				// margin-right: -4px;
 
 				// > li {
 				// 	display: inline-block;
