Add speaker Kumamoto and fix the session he presents #221

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -10,6 +10,14 @@
 	</li>
 	<li>
 		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-dojocon-m.jpg' | prepend: site.baseurl }}" alt="倉本大資のプロフィール画像">
+		</figure>
+		<h2 class="speaker-name">倉本 大資</h2>
+		<p class="speaker-description">Daisuke Kuramoto</p>
+		<p><a href="#daisuke-kuramoto" class="button button-small button-black js-speaker-profile-trigger">More</a></p>
+	</li>
+	<li>
+		<figure class="speaker-avator">
 			<img src="{{ '/assets/images/speaker-rossoneill.jpg' | prepend: site.baseurl }}" alt="ロス・オニールのプロフィール画像">
 		</figure>
 		<h2 class="speaker-name">ロス・オニール</h2>
@@ -142,6 +150,29 @@
 			<p>多摩美術大学研究員、東京学芸大学・武蔵大学非常勤講師、サイバー大学客員教授を経て、現在、青山学院大学客員教授。 <br>
 			2003年度IPA認定スーパークリエータ。文部科学省プログラミング学習に関する調査研究委員。<br>
 			プログラミング監修 Why!?プログラミング（NHK Eテレ）</p>
+		</div>
+	</div>
+</div>
+
+<div id="daisuke-kuramoto" class="speaker-profile-box js-speaker-profile-box">
+	<div class="speaker-profile-box-left">
+		<figure class="speaker-avator">
+			<img src="{{ '/assets/images/speaker-dojocon-m.jpg' | prepend: site.baseurl }}" alt="倉本大資のプロフィール画像">
+		</figure>
+		<p class="speaker-profile-box-label">Session</p>
+		<h3 class="session-title"><a href="#programming-schools-discussion" class="js-fancybox-trigger">有償と無償で何が違う？<br>プログラミング教室/コミュニティー運営座談会</a></h3>
+		<p class="session-time">14:10-14:35</p>
+	</div>
+	<div class="speaker-profile-box-right">
+		<h2 class="speaker-name">倉本 大資</h2>
+		<ul class="speaker-sns">
+			<li><a href="https://twitter.com/qramo" class="icon-twitter-circle" target="_blank"></a></li>
+			<li><a href="https://www.facebook.com/daisuke.kuramoto" class="icon-facebook-circle" target="_blank"></a></li>
+		</ul>
+		<p class="speaker-description">Daisuke Kuramoto</p>
+		<div class="speaker-profile">
+			<p>1980年生まれ。2008年よりScratchを使った子ども向けプログラミングワークショップを実施。現在はOtOMOを運営し、世田谷区三軒茶屋でのワークショップをベースに活動している。「小学生からはじめるわくわくプログラミング２」の著者(日経BP社／監修・共著：阿部和広)。</p>
+			<p>筑波大学芸術専門学群総合造形コース卒業。株式会社シュビキ勤務、社会人向け研修コンテンツの製作に携わる傍、OtOMOの活動、自身の創作活動などを続けている。ただいま０歳の娘を全力で子育て中。</p>
 		</div>
 	</div>
 </div>
