--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -368,6 +368,8 @@
 		<p class="speaker-profile-box-label">Session</p>
 		<h3 class="session-title"><!-- <a href="#opening-ceremony" class="js-fancybox-trigger"> -->オープニングセレモニー<!-- </a> --></h3>
 		<p class="session-time">10:30-10:40</p>
+		<h3 class="session-title"><a href="#champion-panel-discussion" class="js-fancybox-trigger">チャンピオンパネルディスカッション</a></h3>
+		<p class="session-time">15:40-16:20</p>
 	</div>
 	<div class="speaker-profile-box-right">
 		<h2 class="speaker-name">細谷 崇</h2>
