--- a/assets/_sass/_index.scss
+++ b/assets/_sass/_index.scss
@@ -1740,13 +1740,23 @@
 		}
 	}
 }
+.home{
+	.sns-section {
+		@include media($s-screen) {
+			padding-bottom: 80px;
+		}
+
+		@include media($m-screen) {
+			padding-bottom: 80px;
+		}
+	}
+}
 
 .sns-section {
 	background: $blue;
 	color: #fff;
 	padding-bottom: 0;
 	position: relative;
-
 	@include yin-yang-ornament(before, yang, gray) {
 		@include position(absolute, -180px 50% auto auto);
 		margin-right: 440px;
