#289 Add session detail about Ross.

--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -160,7 +160,7 @@
 			<img src="{{ '/assets/images/speaker-rossoneill.jpg' | prepend: site.baseurl }}" alt="ロス・オニールのプロフィール画像">
 		</figure>
 		<p class="speaker-profile-box-label">Session</p>
-		<h3 class="session-title"><!-- <a href="#coderdojo-foundation" class="js-fancybox-trigger"> -->CoderDojoムーブメントの旅 - アイルランドの1つのDojoから世界に広がる1000 Dojoへの軌跡をたどる（仮）<!-- </a> --></h3>
+		<h3 class="session-title"><a href="#coderdojo-foundation" class="js-fancybox-trigger">CoderDojo ムーブメント − 可能にする、かかわる、大きく広がる方法</a></h3>
 		<p class="session-time">15:00-15:40</p>
 	</div>
 	<div class="speaker-profile-box-right">
