Improve styles for long session titles

--- a/assets/_sass/_variables.scss
+++ b/assets/_sass/_variables.scss
@@ -53,3 +53,5 @@ $code-bg-color: #282822;
 $facebook_brand_color: #4963a1;
 $twitter_brand_color: #58abe8;
 $line_brand_color: #25bd62;
+
+$timetable-5min-height: 30px;
